--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
     "name": "data-grids-test",
     "version": "0.1.0",
     "private": true,
+    "engines": {
+        "node": "16.x"
+    },
     "dependencies": {
         "@material-ui/core": "^4.11.4",
         "@material-ui/x-grid": "^4.0.0-alpha.29",
