--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
     "version": "0.1.0",
     "private": true,
     "engines": {
-        "node": "16.x"
+        "node": "14.x"
     },
     "dependencies": {
+        "@devexpress/dx-react-core": "^2.7.5",
+        "@devexpress/dx-react-grid": "^2.7.5",
+        "@devexpress/dx-react-grid-material-ui": "^2.7.5",
+        "@inovua/reactdatagrid-community": "^4.1.18",
         "@material-ui/core": "^4.11.4",
         "@material-ui/data-grid": "^4.0.0-alpha.30",
+        "@material-ui/icons": "^4.11.2",
         "@material-ui/x-grid": "^4.0.0-alpha.29",
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
@@ -15,6 +20,7 @@
         "ag-grid-community": "^25.3.0",
         "ag-grid-react": "^25.3.0",
         "history": "^5.0.0",
+        "primereact": "^6.4.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-router-dom": "^6.0.0-beta.0",
